--- a/spidevicesselect.vcxproj
+++ b/spidevicesselect.vcxproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <ClCompile Include="spidevicesselect.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="spi.licenseheader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
